[gd_scene load_steps=10 format=3 uid="uid://blliftv00gagw"]

[ext_resource type="Script" path="res://scripts/inventory_slot.gd" id="1_gm6o7"]
[ext_resource type="Texture2D" uid="uid://chqvw6b1rjgyw" path="res://theme/atlas/items.tres" id="2_u7stf"]
[ext_resource type="Texture2D" uid="uid://bab8hhuyuwldy" path="res://tempus_assets/ui_assets.png" id="2_wb0gu"]
[ext_resource type="FontFile" uid="uid://cio0c4khks1uc" path="res://tempus_assets/font/monogram/ttf/monogram.ttf" id="3_o184v"]

[sub_resource type="AtlasTexture" id="AtlasTexture_k8ofu"]
atlas = ExtResource("2_wb0gu")
region = Rect2(112, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gv2w2"]
atlas = ExtResource("2_u7stf")
region = Rect2(0, 32, 16, 16)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yn1a7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dwvtn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_esj8v"]
atlas = ExtResource("2_wb0gu")
region = Rect2(32, 48, 32, 32)

[node name="Inventory_Slot" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 100.0
offset_bottom = 100.0
script = ExtResource("1_gm6o7")

[node name="InnerBorder" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 95.0
offset_bottom = 95.0
texture = SubResource("AtlasTexture_k8ofu")
metadata/_edit_lock_ = true

[node name="ItemIcon" type="Sprite2D" parent="InnerBorder"]
position = Vector2(45, 45)
scale = Vector2(3, 3)
texture = SubResource("AtlasTexture_gv2w2")

[node name="ItemQuantity" type="Label" parent="InnerBorder"]
visible = false
layout_mode = 1
offset_left = 13.0
offset_top = 11.0
offset_right = 38.0
offset_bottom = 34.0
theme_override_fonts/font = ExtResource("3_o184v")
theme_override_font_sizes/font_size = 20
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemButton" type="Button" parent="."]
layout_mode = 0
offset_right = 100.0
offset_bottom = 100.0
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_yn1a7")
theme_override_styles/hover = SubResource("StyleBoxEmpty_dwvtn")
metadata/_edit_lock_ = true
metadata/_edit_use_anchors_ = true

[node name="DetailsPanel" type="NinePatchRect" parent="."]
visible = false
z_index = 2
layout_mode = 0
offset_left = -190.0
offset_top = -83.0
offset_right = 50.0
offset_bottom = 47.0
texture = SubResource("AtlasTexture_esj8v")
region_rect = Rect2(0, 0, 32, 32)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="ItemName" type="Label" parent="DetailsPanel"]
layout_mode = 1
offset_left = 15.0
offset_top = 10.0
offset_right = 132.0
offset_bottom = 33.0
theme_override_fonts/font = ExtResource("3_o184v")
theme_override_font_sizes/font_size = 25
text = "Ultima Emblem"
metadata/_edit_lock_ = true

[node name="ItemType" type="Label" parent="DetailsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.284
anchor_bottom = 0.284
offset_left = 15.0
offset_top = -6.92
offset_right = 83.0
offset_bottom = 16.08
grow_vertical = 2
theme_override_colors/font_color = Color(0.720467, 0.720468, 0.720467, 1)
theme_override_fonts/font = ExtResource("3_o184v")
theme_override_font_sizes/font_size = 20
text = "Item Type"
metadata/_edit_lock_ = true

[node name="ItemRarity" type="Label" parent="DetailsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.284
anchor_bottom = 0.284
offset_left = 15.0
offset_top = 8.08
offset_right = 98.0
offset_bottom = 31.08
grow_vertical = 2
theme_override_colors/font_color = Color(0.720467, 0.720468, 0.720467, 1)
theme_override_fonts/font = ExtResource("3_o184v")
theme_override_font_sizes/font_size = 20
text = "Item Rarity"
metadata/_edit_lock_ = true

[node name="ItemEffect" type="Label" parent="DetailsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.565
anchor_bottom = 0.565
offset_left = 15.0
offset_top = -8.45
offset_right = 226.0
offset_bottom = 45.55
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_o184v")
theme_override_font_sizes/font_size = 20
text = "Item Effect and Description"
autowrap_mode = 3

[node name="UsagePanel" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = -240.0
offset_top = -131.0
offset_bottom = -1.0
color = Color(0.25098, 0.231373, 0.188235, 1)

[node name="UseButton" type="Button" parent="UsagePanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -115.0
offset_top = 10.0
offset_right = 115.0
offset_bottom = 53.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_o184v")
theme_override_font_sizes/font_size = 30
text = "USE ITEM"

[node name="DropButton" type="Button" parent="UsagePanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -115.0
offset_top = -59.0
offset_right = 115.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_o184v")
theme_override_font_sizes/font_size = 30
text = "DROP ITEM"

[connection signal="gui_input" from="ItemButton" to="." method="_on_item_button_gui_input"]
[connection signal="mouse_entered" from="ItemButton" to="." method="_on_item_button_mouse_entered"]
[connection signal="mouse_exited" from="ItemButton" to="." method="_on_item_button_mouse_exited"]
[connection signal="pressed" from="UsagePanel/DropButton" to="." method="_on_drop_button_pressed"]
